# ma-transformer

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  NOTICE  PYTEST_FRAMEWORK_SUMMARY.md  PYTORCH_INTEGRATION.md  README.md  TESTING.md  benchmark_vs_pytorch.py  debug_causal_mask.py  generate_hero_graphic.py  generate_long_sequence_benchmark.py  generate_theoretical_64k_chart.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_attention_computation.py  test_cpp_extension.py  test_new_functionality.py  test_pytorch_integration.py
.gemini/: GEMINI.md
configs/: default_config.yaml
data/: README.md  generate_synthetic_ticks.py
doc/: sparse_attention_whitepaper.md  sparse_attention_whitepaper.tex
examples/: pytorch_integration_example.py
scripts/: devcheck.sh  setup_cuda_ubuntu24.sh
src/: best_model.pth  data_loader.py  model.py  temp_best_model.pth  train.py  visualize.py
src/csrc/: attention_factory.cpp  attention_interface.hpp  attention_types.hpp  dense_attention.cpp  ma_core.cpp  ma_core.hpp  main.cpp  sparse_attention.cpp  tensor.cpp  tensor.hpp
src/cuda/: dense_attention_kernel.cu  sparse_attention_kernel.cu
src/layers/: ma_core_bridge.py  sparse_attention.py
tests/: __init__.py
tests/cpp/: CMakeLists.txt  Makefile  ma_core_tests  test_ma_core.cpp
tests/integration/: __init__.py  conftest.py  test_cpu_parity.py  test_cuda_extensive.py  test_cuda_microbenchmarks.py  test_cuda_parity.py  test_cuda_sparse_attention.py  test_error_handling.py  test_ma_core_bridge.py  test_performance_benchmarks.py  test_pytorch_compatibility.py
tests/python/: __init__.py  test_cpu_attention_cpp.py  test_cuda_backward.py  test_cuda_sparse_kernel_launch.py  test_ma_core_extension.py  test_tensor_functionality.py
