[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ma_transformer"
version = "0.1.0"
description = "A project to build a low-latency transformer for financial markets."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "scikit-learn",
    "pyyaml",
    "matplotlib",
]